<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/registration_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pgr_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/registration_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="20dp"
        android:text="@string/login_now"
        android:id="@+id/link_login_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>